--- a/Config_Server/src/main/resources/application.yaml
+++ b/Config_Server/src/main/resources/application.yaml
@@ -4,3 +4,8 @@ server:
 spring:
   profiles:
     active: native
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
