--- a/Medical_Service/src/main/resources/application.yaml
+++ b/Medical_Service/src/main/resources/application.yaml
@@ -4,13 +4,24 @@ server:
     include-message: always
 
 spring:
+  config:
+    import: "optional:configserver:http://localhost:8104"
   jpa:
     hibernate:
       ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/MedStaff
     username: root
     password: Clearme@1824
     driver-class-name: com.mysql.cj.jdbc.Driver
+  application:
+    name: medical_service
+
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
