--- a/Api_Gateway/src/main/resources/application.yaml
+++ b/Api_Gateway/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8104/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 management:
   tracing:
@@ -12,22 +12,24 @@ management:
       probability: 1.0
 
 spring:
+  main:
+    web-application-type: reactive
   application:
     name: api-gateway
   config:
-    import: "optional:configserver:http://localhost:8088"
+    import: "optional:configserver:http://localhost:8104"
   cloud:
     gateway:
       routes:
-        - id: medical-service
-          uri: lb://medical-service
+        - id: medical_service
+          uri: lb://medical_service
           predicates:
             - Path=/medical/**
-        - id: patient-service
-          uri: lb://patient-service
+        - id: patient_service
+          uri: lb://patient_service
           predicates:
             - Path=/patient/**
-        - id: department-service
-          uri: lb://department-service
+        - id: department_service
+          uri: lb://department_service
           predicates:
             - Path=/department/**
