--- a/Patient_Service/src/main/resources/application.yaml
+++ b/Patient_Service/src/main/resources/application.yaml
@@ -11,7 +11,6 @@ spring:
       ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/Patient
     username: root
@@ -24,5 +23,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
 
 
