--- a/Department_Service/src/main/resources/application.yaml
+++ b/Department_Service/src/main/resources/application.yaml
@@ -11,12 +11,13 @@ spring:
       ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/Department
     username: root
     password: Clearme@1824
     driver-class-name: com.mysql.cj.jdbc.Driver
+  application:
+    name: department_service
 
 eureka:
   client:
