exception handling added

--- a/Medical_Service/src/main/resources/application.yaml
+++ b/Medical_Service/src/main/resources/application.yaml
@@ -33,7 +33,7 @@ logging:
   level:
     com.bruceycode.Medical_Service: DEBUG
     org:
-      springframework: TRACE
+      springframework: DEBUG
       hibernate:
         SQL: DEBUG
         type:
