token propagation for patient service from medical service

--- a/Medical_Service/src/main/resources/application.yaml
+++ b/Medical_Service/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     import: "optional:configserver:http://localhost:8104"
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   datasource:
