--- a/Patient_Service/src/main/resources/application.yaml
+++ b/Patient_Service/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/Patient
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/Patient_db
     username: root
     password: Clearme@1824
     driver-class-name: com.mysql.cj.jdbc.Driver
