--- a/Medical_Service/pom.xml
+++ b/Medical_Service/pom.xml
@@ -101,6 +101,11 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version> <!-- Latest version as of March 2025 -->
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
